Consider ClipPathDisplayItems for GPU veto.

Based on senorblanco's investigation, we currently don't veto complex
clipPaths.

Building on top of http://crrev.com/2000423005, refactor DisplayItem
GPU veto to also feed ClipPathDisplayItem signals into SkPictureGpuAnalyzer.

BUG=603969
R=chrishtr@chromium.org,senorblanco@chromium.org

Review-Url: https://codereview.chromium.org/2013723002
Cr-Commit-Position: refs/heads/master@{#396232}

Former-commit-id: c64bd21780da13051846ae45b54a1e6c6bf6ac52